--- a/content.Rmd
+++ b/content.Rmd
@@ -387,34 +387,417 @@ output:
 </center>
 </br>
 
+<br>
 
 ## Class 13
 
+**Read:** 
+
+* R&J Chapter 29
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 13.1 - Filarial nematodes - Onchocerca volvulus](https://img.youtube.com/vi/jcEOxIuByWs/0.jpg)](https://www.youtube.com/watch?v=jcEOxIuByWs)
+</center>
+</br>
+
+<br>
+<center>
+[![Parasites Without Borders, Parasitic Diseases Lectures #29: Onchocercaiasis](https://img.youtube.com/vi/mUHVIHxQCC0/0.jpg)](https://www.youtube.com/watch?v=mUHVIHxQCC0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 13.2 - Filarial nematodes - Loa loa](https://img.youtube.com/vi/8w4wcylx5-A/0.jpg)](https://www.youtube.com/watch?v=8w4wcylx5-A)
+</center>
+</br>
+
+<br>
+<center>
+[![Al Jazeera English, Lifelines - How To Slay A Dragon](https://img.youtube.com/vi/znRQvTCJvy0/0.jpg)](https://www.youtube.com/watch?v=znRQvTCJvy0)
+</center>
+</br>
+
 ## Class 14
+
+**Watch:**
+
+* [*Accidental Host*](https://stream-mcintyre-ca.offcampus.lib.washington.edu/uwash/title/27444), a 53-minute documentary about rat lungworm disease
+
+In this class, we will hold a live discussion of "Accidental Host" with a real-life rat lungworm patient. Please show your respect for this person by watching the entire documentary and arriving to class ready to ask thoughtful, sensitive questions about their experiences.
+
+<br>
 
 ## Class 15
 
+**Read:** 
+
+* R&J Chapter 33
+
+**UWCC:** 15.01, 15.02, 15.03, 15.04
+
+<br>
+<center>
+[![Lecture 15.1 - Introduction to the arthropods](https://img.youtube.com/vi/KbmkhYU26Wc/0.jpg)](https://www.youtube.com/watch?v=KbmkhYU26Wc)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 15.2 - Arthropods as ectoparasites](https://img.youtube.com/vi/dPGTnyHLtfs/0.jpg)](https://www.youtube.com/watch?v=dPGTnyHLtfs)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 15.3 - Arthropods as Protelean parasites](https://img.youtube.com/vi/GWBrafeNIvU/0.jpg)](https://www.youtube.com/watch?v=GWBrafeNIvU)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 15.4 - Arthropods as micropredators](https://img.youtube.com/vi/-FbgPtj6sco/0.jpg)](https://www.youtube.com/watch?v=-FbgPtj6sco)
+</center>
+</br>
+
+<br>
+
 ## Class 16
+
+**Read:** 
+
+* R&J Chapter 41 (ONLY intro, *Ixodes* spp., *Dermacentor* spp., family Argasidae, family Demodicidae, family Trombiculidae, family Sarcoptidae, family Pyroglyphidae)
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 16.1 - The success of the Arthropoda](https://img.youtube.com/vi/x8eat5bXTD8/0.jpg)](https://www.youtube.com/watch?v=x8eat5bXTD8)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 16.2 - The ticks](https://img.youtube.com/vi/KmuR1O2g4UA/0.jpg)](https://www.youtube.com/watch?v=KmuR1O2g4UA)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 16.3 - The mites](https://img.youtube.com/vi/IHYjahvKPUM/0.jpg)](https://www.youtube.com/watch?v=IHYjahvKPUM)
+</center>
+</br>
+
+<br>
 
 ## Class 17
 
+**Read:** 
+
+* R&J Chapter 36 (pp. 577-579)
+* R&J Chapter 37 (all)
+* R&J Chapter 38 (pp. 589-592, 595-599)
+
+**UWCC:** NONE
+
+<br>
+<center>
+[![Lecture 17.1 - Arthropods and human history](https://img.youtube.com/vi/5Wc10FE8Ikg/0.jpg)](https://www.youtube.com/watch?v=5Wc10FE8Ikg)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 17.2 - Lice](https://img.youtube.com/vi/Hkh-QfkJ_jI/0.jpg)](https://www.youtube.com/watch?v=Hkh-QfkJ_jI)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 17.3 - Hemipteran micropredators](https://img.youtube.com/vi/PeDzCQrlR_s/0.jpg)](https://www.youtube.com/watch?v=PeDzCQrlR_s)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 17.4 - Fleas](https://img.youtube.com/vi/UlhwzUheno8/0.jpg)](https://www.youtube.com/watch?v=UlhwzUheno8)
+</center>
+</br>
+
+<br>
+
 ## Class 18
+
+**Read:** 
+
+* R&J Chapter 39 (pp. 601-612, pp. 621)
+
+**UWCC:** 18.04
+
+<br>
+<center>
+[![Lecture 18.1 - Opening the black box marked vector](https://img.youtube.com/vi/a4zcuicN1F4/0.jpg)](https://www.youtube.com/watch?v=a4zcuicN1F4)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 18.2 - Sand flies](https://img.youtube.com/vi/_-I-WyBeLBw/0.jpg)](https://www.youtube.com/watch?v=_-I-WyBeLBw)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 18.3 - Black flies and deer flies](https://img.youtube.com/vi/q1Zn1fiKbjM/0.jpg)](https://www.youtube.com/watch?v=q1Zn1fiKbjM)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 18.4 - Mosquitoes and mosquito control](https://img.youtube.com/vi/P31YZNf0RzM/0.jpg)](https://www.youtube.com/watch?v=P31YZNf0RzM)
+</center>
+</br>
+
+<br>
 
 ## Class 19
 
+**Read:** 
+
+* R&J Chapter 31
+* R&J Chapter 32
+
+**UWCC:** 19.01, 19.02
+
+<br>
+<center>
+[![Lecture 19.1 - Nematomorphs](https://img.youtube.com/vi/phBMNZoNflA/0.jpg)](https://www.youtube.com/watch?v=phBMNZoNflA)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 19.2 - Acanthocephalans](https://img.youtube.com/vi/kH3lXDiyDOY/0.jpg)](https://www.youtube.com/watch?v=kH3lXDiyDOY)
+</center>
+</br>
+
+<br>
+
 ## Class 20
+
+**Read:** 
+
+* R&J Chapter 4 (pp. 43–44, pp. 50–53) 
+* R&J Chapter 5 (pp. 61–69, pp. 71-73, pp. 77-79, pp. 82-85) 
+* R&J Chapter 6 (pp. 90-94) 
+* R&J Chapter 7 (p. 107–114)
+
+**UWCC:** 20.01
+
+<br>
+<center>
+[![Lecture 20.1 - Introduction to the Protozoa](https://img.youtube.com/vi/ntoBx2k5y2w/0.jpg)](https://www.youtube.com/watch?v=ntoBx2k5y2w)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 20.2 - Amoebae](https://img.youtube.com/vi/6Q6b7atEcG0/0.jpg)](https://www.youtube.com/watch?v=6Q6b7atEcG0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 20.3 - Flagellates](https://img.youtube.com/vi/zDhUThIJwjk/0.jpg)](https://www.youtube.com/watch?v=zDhUThIJwjk)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 20.4 - Hemoflagellates](https://img.youtube.com/vi/DzsT6MRuWPs/0.jpg)](https://www.youtube.com/watch?v=DzsT6MRuWPs)
+</center>
+</br>
+
+<br>
 
 ## Class 21
 
+**Read:** 
+
+* [Lafferty 2006](https://doi.org/10.1098/rspb.2006.3641)
+
+**UWCC:** 21.01, 21.02a, 21.02b, 21.03
+
+<br>
+<center>
+[![Lecture 21.1 - The apicomplexan Toxoplasma gondii - basics](https://img.youtube.com/vi/ZBfFZ4QQpxw/0.jpg)](https://www.youtube.com/watch?v=ZBfFZ4QQpxw)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 21.2 - The apicomplexan Toxoplasma gondii - pathology in humans](https://img.youtube.com/vi/C1rqfCWTwyo/0.jpg)](https://www.youtube.com/watch?v=C1rqfCWTwyo)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 21.3 - The apicomplexan Toxoplasma gondii - pathology in marine mammals](https://img.youtube.com/vi/DaBdkoMMHUU/0.jpg)](https://www.youtube.com/watch?v=DaBdkoMMHUU)
+</center>
+</br>
+
+<br>
+
 ## Class 22
+
+**Read:** 
+
+* R&J Chapter 8 (pp. 123-127, pp. 134-139) 
+* R&J Chapter 9 (p. 147–162)
+
+**UWCC:** 22.02a, 22.02b
+
+<br>
+<center>
+[![Lecture 22.1 - The apicomplexan Plasmodium - basics](https://img.youtube.com/vi/y8YYTtUW7Iw/0.jpg)](https://www.youtube.com/watch?v=y8YYTtUW7Iw)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 22.3 - The apicomplexan Plasmodium - pathology](https://img.youtube.com/vi/xIrezlv3YJU/0.jpg)](https://www.youtube.com/watch?v=xIrezlv3YJU)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 22.4 - The apicomplexan Plasmodium - control](https://img.youtube.com/vi/CLJevBP7gEE/0.jpg)](https://www.youtube.com/watch?v=CLJevBP7gEE)
+</center>
+</br>
+
+<br>
 
 ## Class 23
 
+**Read:** 
+
+* Nothing!
+
+**UWCC:** 23.07
+
+**Watch:** For this practical session, you are required to watch the movie Contagion. If you have a subscription to Hulu or HBO Max, you can watch it there. You can also rent the movie on Amazon Prime for $3.99.
+
+<br>
+<center>
+[![Lecture 23.1 - Abridged bacteria and viruses - the basics](https://img.youtube.com/vi/7IYN-QAgBF8/0.jpg)](https://www.youtube.com/watch?v=7IYN-QAgBF8)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 23.2 - Abridged bacteria and viruses - trachoma](https://img.youtube.com/vi/Ex8ofT8HTkk/0.jpg)](https://www.youtube.com/watch?v=Ex8ofT8HTkk)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 23.3 - Abridged bacteria and viruses - Buruli ulcer](https://img.youtube.com/vi/vGSM5EDZ16E/0.jpg)](https://www.youtube.com/watch?v=vGSM5EDZ16E)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 23.4 - Abridged bacteria and viruses - leprosy](https://img.youtube.com/vi/V92GYg3bRs0/0.jpg)](https://www.youtube.com/watch?v=V92GYg3bRs0)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 23.5 - Abridged bacteria and viruses - rabies](https://img.youtube.com/vi/ob95mySfFd8/0.jpg)](https://www.youtube.com/watch?v=ob95mySfFd8)
+</center>
+</br>
+
+<br>
+
 ## Class 24
+
+**Read:** [Wood and Johnson 2015](https://doi.org/10.1890/140368)
+
+**UWCC:** 24.00
+
+<br>
+<center>
+[![Lecture 24 - The ecological importance of parasites](https://img.youtube.com/vi/2AfDnkRSl10/0.jpg)](https://www.youtube.com/watch?v=2AfDnkRSl10)
+</center>
+</br>
+
+<br>
 
 ## Class 25
 
+**Read:** 
+
+* [Keesing et al. 2010](https://doi.org/10.1038/nature09575)
+* [Wood et al. 2017](https://doi.org/10.1098/rstb.2016.0122)
+
+**UWCC:** 25.01a, 25.01b, 25.01c
+
+<br>
+<center>
+[![Lecture 25 - Nature's services, nature's disservices](https://img.youtube.com/vi/KFhzg8DNpNA/0.jpg)](https://www.youtube.com/watch?v=KFhzg8DNpNA)
+</center>
+</br>
+
+<br>
+
 ## Class 26
+
+**Note:** In this session, 10 minutes will be set aside for completion of course evaluations – and if >90% of students complete evals, there will be a 5-point bonus question on the final!
+
+**Read:** Nothing!
+
+**UWCC:** 26.00
+
+<br>
+<center>
+[![Lecture 26.1 - Take homes - parasites are staggeringly diverse](https://img.youtube.com/vi/5x7bJqMYyyM/0.jpg)](https://www.youtube.com/watch?v=5x7bJqMYyyM)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 26.2 - Take homes - parasites perform vital ecological functions](https://img.youtube.com/vi/h3K3DPlnIMQ/0.jpg)](https://www.youtube.com/watch?v=h3K3DPlnIMQ)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 26.3 - Take homes - parasites affect history, history affects parasites](https://img.youtube.com/vi/BqjKF8l5DBA/0.jpg)](https://www.youtube.com/watch?v=BqjKF8l5DBA)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 26.4 - Take homes - we have a moral responsibility to address NTDs](https://img.youtube.com/vi/tt5Na7bwdCw/0.jpg)](https://www.youtube.com/watch?v=tt5Na7bwdCw)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 26.4 - Take homes - we have a moral responsibility to address NTDs](https://img.youtube.com/vi/tt5Na7bwdCw/0.jpg)](https://www.youtube.com/watch?v=tt5Na7bwdCw)
+</center>
+</br>
+
+<br>
+<center>
+[![Lecture 26.5 - Take homes - there is no parasitologist's dilemma](https://img.youtube.com/vi/Y8j4Gylw94o/0.jpg)](https://www.youtube.com/watch?v=Y8j4Gylw94o)
+</center>
+</br>
+
+<br>
 
 # Labs
 
@@ -1638,3 +2021,5 @@ This lab will be a review session for your Final Exam.
 **This session will be driven by *your* questions!** Your TA will stick around for the entire session, but we will only talk about what you ask us to talk about. One thing you might consider is reviewing all of your course notes before this  session and flagging any areas where you are not 100% clear. We will have access to all of the course powerpoints and review any content you wish.
 
 <br>
+
+<center>*This site was last updated at `r format(Sys.time(), "%H:%M")` on `r format(Sys.Date(), "%d %b %Y")`*</center>
