--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -3,6 +3,13 @@ title: "Schedule"
 output: html_document
 ---
 
+fish406_cal<-calendar(cal_data,navigation = T, defaultDate=as.Date("2025-09-24")) %>%
+cal_month_options(
+startDayOfWeek=0,
+narrowWeekend=T
+) %>%
+cal_props(cal_data)
+
 ```{r generate_calendar, eval = FALSE, echo=FALSE}
 ## load library
 library(toastui)
@@ -11,49 +18,14 @@ library(toastui)
 cal_data<-read.csv("calendar_data.csv")
 
 ## display calendar
-fish406_cal<-calendar(cal_data,navigation = T, defaultDate=as.Date("2025-09-24")) %>%
-cal_month_options(
-startDayOfWeek=0,
-narrowWeekend=T
-) %>%
-cal_props(cal_data)
-
-<link rel="stylesheet" type="text/css" href="https://uicdn.toast.com/tui-calendar/latest/tui-calendar.css" />
-  <script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-
-      <script type="text/javascript">
-    var cal, resizeThrottled;
-    var useCreationPopup = true;
-    var useDetailPopup = true;
-    var datePicker, selectedCalendar;
-
-    cal = new tui.Calendar('fish406_cal', {
-    defaultView: 'week',
-    useCreationPopup: useCreationPopup,
-    useDetailPopup: useDetailPopup,
-    calendars: CalendarList,
-    template: {
-        milestone: function(model) {
-            return '<span class="calendar-font-icon ic-milestone-b"></span> <span style="background-color: ' + model.bgColor + '">' + model.title + '</span>';
-        },
-        allday: function(schedule) {
-            return getTimeTemplate(schedule, true);
-        },
-        time: function(schedule) {
-            return getTimeTemplate(schedule, false);
-        }
-    }
-});
-</script>
-
+calendar(cal_demo_data(), navigation = TRUE, defaultDate = Sys.Date()) %>%
+  cal_month_options(
+    startDayOfWeek  = 1, 
+    narrowWeekend = TRUE
+  ) %>% 
+  cal_props(cal_demo_props())
     
 ```
-print(fish406_cal)
-
 
 <br>
 
