adding scope tutorial

--- a/content.Rmd
+++ b/content.Rmd
@@ -950,6 +950,30 @@ Schistosome cercariae are fork-tailed.  Once released from their snail hosts, th
 </center>
 </br>
 
+#### Microscope refresher
+
+You've all used microscopes before, but a refresher never hurts! In this lab, your TA will walk you through how to use the scopes. We will use two kinds: dissecting microscopes (sometimes called stereomicroscopes or stereoscopes) are for seeing things that light bounces off of. They don't have as much magnifying power as a compound microscope, but they have the advantage that you can just stick something onto the stage to look at it - you can even do a whole dissection right on the stage (hence the term, dissecting microscope). Compound microscopes only work for specimens that light can pass through, which is why you always need to mount a specimen on a microscope slide before putting it on the stage of a comopund scope. Here are some tricks for getting started with each kind of scope.
+
+**Stereoscope or dissecting microscope**
+
+1. The zoom body of the stereoscope (i.e., the part that the optics are attached to) can be moved up and down with the coarse focus knobs. The two coarse focus knobs are attached to one another by a screw, which can sometimes become loose. If that happens, the zoom body will slide down with gravity. You can fix this by tightening the screw - just put your hands on the two coarse focus knobs and turn in opposite directions to tighten or loosen the screw.
+2. Even if you have 20/20 vision, your eyes  differ slightly from one another in their ability to focus at close range. Your microscope can compensate for this, and if you adjust the scope to your eyes, you will be amazed at how much more you're able to see. To do this, put a specimen on the microscope stage, close your right eye, pick out one tiny part of the specimen with your left eye, and get it in perfect focus using the focus knob. Now close your left eye, open your right, and don't touch that focus knob - just twist the right eyepiece until that same tiny part of the specimen is in perfect focus.
+3. Now that you're fully focused, any further issues with the scope are likely to be about the cleanliness of the optics. There are two places where dirt tends to accumulate: on the lens of the eyepiece (oils from eyelids and eyelashes, makeup, dust) and on the lens of the objective (splash from specimens, fingerprints). Microscope lenses are very delicate - they are easily scratched, and those scratches ruin the scope. So we will only ever clean these surfaces with special lens paper and lens cleaner (never harsh cleaning chemicals or paper towels). Your TA can provide lens paper and lens cleaner if you'd like to clean up the optics on your scope.
+
+**Compound microscope**
+
+While you probably have tons of experience on stereomicroscopes, you may have spent less time on compound scopes. This course is a great opportunity to learn how to use compounds, which allow you to visualize some truly tiny creatures. To make sure you're maximally prepared for using compound scopes in lab, please ensure that you watch the video below.
+
+<br>
+<center>
+[![Oregon State University eCampus video, Learn to operate a compound microscope](https://img.youtube.com/vi/uEgM3gk8n6k/0.jpg)](https://www.youtube.com/watch?v=uEgM3gk8n6k)
+</center>
+</br>
+
+Also make sure to take the compound microscope [tour](https://courses.ecampus.oregonstate.edu/bi206/02parts/tour.html) and [test your compound microscope skills](https://courses.ecampus.oregonstate.edu/bi206/03identify/partsgame.html).
+
+<br>
+
 #### *Schistosoma mansoni* adults in the vertebrate definitive host
 
 Note that *Schistosoma*-infected mice were provided by the NIAID Schistosomiasis Resource Center for distribution through BEI Resources, NIH-NIAID Contract HHSN272201000005I (NIH: Schistosoma mansoni, Strain NMRI, Exposed Swiss Webster Mice, NR-21963).
